Resolves: tdf#91683 Revert avoid activating chart objects...

just to get their mapunit or set visual size.

Will have to try something different here apparently

This reverts commit 757f461ef12548af0be470f7c05ff67df3dc1314.

(cherry picked from commit f2b3519c6b2aceacbe2fd9d53eb52dd36a356ecc)